feat: 更新 CHANGELOG，添加实时文件监听和自动重新加载功能，新增文件删除警告和加载统计 feat: 添加 MIT 许可证文件 fix: 修复自动补全逻辑，支持过滤式补全 feat: 实现监听所有递归导入的 Less 文件变化

--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "less-vue-sfc",
   "displayName": "easier-less-vue",
   "description": "一个简单方便使用less的vscode插件(支持在vue sfc中运行)",
-  "version": "0.0.9",
-  "publisher": "ADKcodeXD",
+  "version": "0.0.2",
+  "publisher": "dmxiaoshubao",
   "repository": "https://github.com/ADKcodeXD/easier-less",
-  "icon": "images/less-vue.png",
+  "license": "MIT",
+  "icon": "images/less-for-vue.png",
   "engines": {
     "vscode": "^1.46.0"
   },
