--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "less-vue-sfc",
-  "displayName": "easier-less-vue",
+  "name": "easy-to-use-less-vue",
+  "displayName": "easy-use-less-vue",
   "description": "一个简单方便使用less的vscode插件(支持在vue sfc中运行)",
   "version": "0.0.2",
   "publisher": "dmxiaoshubao",
